feat(frontend): add StreamChat client wrapper

--- a/0C.md
+++ b/0C.md
@@ -4,7 +4,7 @@
 
 | ID  | Description (≤ LOC)                                                                                                                 | Owner | Status |
 |-----|-------------------------------------------------------------------------------------------------------------------------------------|-------|--------|
-| F1  | **Env & SDK wrapper (≈ 20)** – add `.env.local`; create `lib/getStreamClient.ts` that memoises `StreamChat.getInstance(process.env.NEXT_PUBLIC_API_URL!)` |       | ☐ |
+| F1  | **Env & SDK wrapper (≈ 20)** – add `.env.local`; create `lib/getStreamClient.ts` that memoises `StreamChat.getInstance(process.env.NEXT_PUBLIC_API_URL!)` |       | ✅ |
 | F2  | **Token fetch utility (≈ 30)** – `lib/getToken.ts` calls `/api/token` and returns `{ userID, userToken }`                            |       | ☐ |
 | F3  | **ChatProvider component (≈ 40)** – React Context; in `useEffect` do `client.connectUser({ id: userID }, userToken)` and expose `{ client, channel }` |       | ☐ |
 | F4  | **Default channel bootstrap (≈ 30)** – `client.channel("messaging", "general").watch()`; store channel in Context                    |       | ☐ |
