--- a/0C.md
+++ b/0C.md
@@ -8,7 +8,7 @@
 | F2  | **Token fetch utility (≈ 30)** – `lib/getToken.ts` calls `/api/token` and returns `{ userID, userToken }`                            |       | ✅ |
 | F3  | **ChatProvider component (≈ 40)** – React Context; in `useEffect` do `client.connectUser({ id: userID }, userToken)` and expose `{ client, channel }` |       | ✅ |
 | F4  | **Default channel bootstrap (≈ 30)** – `client.channel("messaging", "general").watch()`; store channel in Context                    |       | ✅ |
-| F5  | **UI scaffold (≤ 50)** – `<Chat><Channel><Window><MessageList/><MessageInput/></Window></Channel></Chat>`                            |       | ☐ |
+| F5  | **UI scaffold (≤ 50)** – `<Chat><Channel><Window><MessageList/><MessageInput/></Window></Channel></Chat>`                            |       | ✅ |
 | F6  | **Event logger & markRead (≈ 20)** – `channel.on("message.new", () => channel.markRead())`                                           |       | ☐ |
 | F7  | **Smoke-test page (≈ 10)** – Next 15 route `/demo` mounts the provider & scaffold; shows “hello world” round-trip                    |       | ☐ |
 
